--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="logo">
             <a
               href="index.html"
-              class="frijole-regular "
+              class="poppins-bold"
               style="
                 text: size 30px;
                 text-decoration: none;
@@ -42,29 +42,28 @@
           <div class="right">
             <!-- Navbar Elements -->
             <div class="headerele paymentspage ">
-              <a style="text-decoration: none; class="navlinktext currentpage" color: white" href="pay.html">
+              <a style="text-decoration: none; class="navlinktext " href="pay.html">
                 Payment
               </a>
             </div>
             <div class="headerele recharge">
-              <a style="text-decoration: none; class="navlinktext" color: white"
-                href="recharge.html">
+              <a  href="recharge.html" style="text-decoration: none;  color: white" class="navlinktext"> 
                 Recharge
               </a>
             </div>
             <div class="headerele travel">
-              <a style="text-decoration: none; class="navlinktext"  color: white" href="travel.html"
+              <a href="travel.html" style="text-decoration: none;   color: white" class="navlinktext"
                 >Travel</a
               >
             </div>
             <div class="headerele credit">
-              <a style="text-decoration: none; class="navlinktext"  color: white" href="credit.html"
+              <a href="credit.html" style="text-decoration: none;  color: white" class="navlinktext" 
                 >Credit Card</a
               >
             </div>
           </div>
           <div class="headerele login">
-            <a style="text-decoration: none; class="navlinktext"  color: white" href="login.html"
+            <a href="login.html" style="text-decoration: none;   color: white" class="navlinktext"
               >Login</a
             >
           </div>
@@ -73,16 +72,20 @@
         <!-- HERO SECTION BEGINS -->
       <div class="conainer">
         <div class="hero">
-          <div class="herotabs ha1">
-            <p class="rubik-glitch-regular" id="text1">Instant Payments</p>
-            <p class="frijole-regular" id="text2">Infinite Convenience</p>
+          <div class="herotabs ha1"> 
+            <p class=" google-sans-flex" id="text1">Switch to Better</p>
+            <p class="google-sans-flex" id="text2">Explore Payora</p>
+            <p class="google-sans-flex hero-text">Instant Payments</p>
+      <p class=" google-sans-flex hero-text">Higher Cashbacks</p>
+      <p class="google-sans-flex hero-text">Secure Transactions</p>
+      <p class="google-sans-flex hero-text">Rewarding Experience</p>
           </div>
           <!-- <div class="herotabs ha2"></div>
     <div class="herotabs ha3"></div> -->
         </div>
         <div class="useful google-sans-code">
           <div class="boxs cc">
-            <p class="textcc1 frijole-regular">Credit Card</p>
+            <p class="textcc1 google-sans-flex">Credit Card</p>
             <br />
             <p class="textcc1 google-sans-flex" style="font-size: 30px">Get a FD-Backed RBI Approved Credit Card</p>
             <img
@@ -94,7 +97,7 @@
             />
           </div>
           <div class="boxs rc">
-            <p class="textrc1 frijole-regular">Recharge</p>
+            <p class="textrc1 google-sans-flexr">Recharge</p>
             <br />
             <p class="textrc1 google-sans-flex" style="font-size: 30px">
               Running low? Recharge in seconds!
@@ -107,7 +110,7 @@
             />
           </div>
           <div class="boxs trv">
-            <p class="texttrv1 frijole-regular">Travel</p>
+            <p class="texttrv1 google-sans-flex">Travel</p>
             <br />
             <p class="texttrv1 google-sans-flex" style="font-size: 30px">Your Fav Destinations, now within Reach</p>
             <img
