--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <!-- <img src="Images/payora_transp.png" id="payoraa_logo"> -->
             <a
               href="index.html"
-              class="frijole-regular"
+              class="poppins-bold"
               style="
                 text: size 30px;
                 text-decoration: none;
