--- a/credit.html
+++ b/credit.html
@@ -20,7 +20,7 @@
             <!-- <img src="Images/payora_transp.png" id="payoraa_logo"> -->
             <a
               href="index.html"
-              class="frijole-regular"
+              class="google-sans-flex"
               style="
                 text: size 30px;
                 text-decoration: none;
@@ -70,9 +70,9 @@
           <!-- main body code here  -->
           <div class="paydiv">
             <div class="paybody leftsidepay ">
-              <h1 class="leftsidehtext frijole-regular">PREMIUM</h1>
-              <h1 class="leftsidehtext frijole-regular">CREDIT</h1>
-              <h1 class="leftsidehtext frijole-regular">CARDS</h1>
+              <h1 class="leftsidehtext google-sans-flex">PREMIUM</h1>
+              <h1 class="leftsidehtext google-sans-flex">CREDIT</h1>
+              <h1 class="leftsidehtext google-sans-flex">CARDS</h1>
               <p class="leftsideptext urbanist"> Instant Approval. Exclusive Rewards.
 </p>
 <p class="leftsideptext urbanist">Your Financial Freedom starts here.</p>
@@ -82,7 +82,7 @@
            <img src="Images/cc_5.png" alt="">
           </div>
           </div>
-          <div class=" google-sans-flex">
+          <div class="footer google-sans-flex">
           <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
            <p class="footertext">Made for the next generation of payments — © Payora.</p>
             <p class="footertext">Built with ❤️ in India.</p>
