--- a/travel.html
+++ b/travel.html
@@ -18,7 +18,7 @@
           <div class="logo">
             <a
               href="index.html"
-              class="frijole-regular"
+              class="poppins-bold"
               style="
                 text: size 30px;
                 text-decoration: none;
@@ -76,7 +76,7 @@
             <form action="post" class="payment-form">
               <div class="tofrom">
               <label class="form-content" style="font-size: 25px;" style="" for="no"></label>
-              <input class="form-content" style="height: 70px; border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 20px;" type="text" id="no" name="no" placeholder=" ORIGIN">
+              <input class="form-content" style="height: 70px; border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 20px;" type="text" id="no" name="no" placeholder=" ORIGIN" class="searchInput">
 
               <p style="margin: auto;"> ↔ </p>
 
@@ -115,4 +115,13 @@
         </div>
         </div>
 </body>
+<script>
+  const searchInput = document.getElementsByClassName("searchInput");
+const displayText = document.getElementById("displayText");
+
+searchInput.addEventListener("input", function () {
+  displayText.textContent = searchInput.value;
+});
+
+</script>
 </html>
