--- a/index.html
+++ b/index.html
@@ -75,17 +75,13 @@
           <div class="herotabs ha1"> 
             <p class=" google-sans-flex" id="text1">Switch to Better</p>
             <p class="google-sans-flex" id="text2">Explore Payora</p>
-            <p class="google-sans-flex hero-text">Instant Payments</p>
-      <p class=" google-sans-flex hero-text">Higher Cashbacks</p>
-      <p class="google-sans-flex hero-text">Secure Transactions</p>
-      <p class="google-sans-flex hero-text">Rewarding Experience</p>
           </div>
           <!-- <div class="herotabs ha2"></div>
     <div class="herotabs ha3"></div> -->
         </div>
         <div class="useful google-sans-code">
           <div class="boxs cc">
-            <p class="textcc1 google-sans-flex">Credit Card</p>
+            <p class="textcc1 google-sans-flex"><b>Credit Card</b></p>
             <br />
             <p class="textcc1 google-sans-flex" style="font-size: 30px">Get a FD-Backed RBI Approved Credit Card</p>
             <img
@@ -97,7 +93,7 @@
             />
           </div>
           <div class="boxs rc">
-            <p class="textrc1 google-sans-flexr">Recharge</p>
+            <p class="textrc1 google-sans-flex"><b>Recharge</b></p>
             <br />
             <p class="textrc1 google-sans-flex" style="font-size: 30px">
               Running low? Recharge in seconds!
@@ -110,7 +106,7 @@
             />
           </div>
           <div class="boxs trv">
-            <p class="texttrv1 google-sans-flex">Travel</p>
+            <p class="texttrv1 google-sans-flex"><b>Travel</b></p>
             <br />
             <p class="texttrv1 google-sans-flex" style="font-size: 30px">Your Fav Destinations, now within Reach</p>
             <img
