--- a/login.html
+++ b/login.html
@@ -99,5 +99,8 @@
             <p class="footertext">Built with ❤️ in India.</p>
         </div>
         </div>
+        <script>
+          
+        </script>
 </body>
 </html>
